manifests/tenants/my-tenant/company-services/vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-tenant-vaultwarden
  labels:
    app.kubernetes.io/managed-by: company-as-code
