manifests/tenants/my-tenant/company-services/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: my-tenant-vaultwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: 8000
